[MOOSE-156]: Fix Utility Submenu not showing in the editor

--- a/wp-content/themes/core/blocks/tribe/standard-menu-item/editor.pcss
+++ b/wp-content/themes/core/blocks/tribe/standard-menu-item/editor.pcss
@@ -31,8 +31,4 @@
 			display: none;
 		}
 	}
-
-	.tribe-standard-menu-item__toggle + .site-header__standard-menu-item-wrapper {
-		display: none !important;
-	}
 }
